Test fix for Post Counter.